--- a/app/calendar/calendar.module.css
+++ b/app/calendar/calendar.module.css
@@ -260,11 +260,10 @@
   width: 100%;
   height: 100%;
   min-height: 54px;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center top;
   display: block;
   vertical-align: middle;
-  background: var(--bg-card);
 }
 
 .calendarPostMediaPlaceholder {
